tests/negative/match_type_mismatch.osc
// EXPECT ERROR: Match arms produce different types (§5.9 rule 4)
// All arms of a match expression must produce the same type.

fn! main() {
    let x: i32 = 5;
    let r: i32 = match x {
        0 => 0,
        1 => "one",
        _ => 2,
    };
    print_i32(r);
}
